<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.edu.ufcspa.snorlax_angelo.TelaQuestionario"
    tools:showIn="@layout/activity_tela_questionario">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest_perg_acor"
                android:id="@+id/textView"
                android:textSize="20sp" />

            <RadioGroup
                android:layout_width="270dp"
                android:layout_height="82dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sim"
                    android:id="@+id/radioButton" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Não"
                    android:id="@+id/radioButton2" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest_perg_cans"
                android:id="@+id/textView2"
                android:textSize="20sp" />

            <RadioGroup
                android:layout_width="270dp"
                android:layout_height="85dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sim"
                    android:id="@+id/radioButton3" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Não"
                    android:id="@+id/radioButton4" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest_perg_falta_ar"
                android:id="@+id/textView3"
                android:textSize="20sp" />

            <RadioGroup
                android:layout_width="270dp"
                android:layout_height="76dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sim"
                    android:id="@+id/radioButton5" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Não"
                    android:id="@+id/radioButton6" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest_perg_medicacao"
                android:id="@+id/textView4"
                android:textSize="20sp" />

            <RadioGroup
                android:layout_width="270dp"
                android:layout_height="155dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sim"
                    android:id="@+id/radioButton7" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Não"
                    android:id="@+id/radioButton8" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest_perg_pressao"
                android:id="@+id/textView5"
                android:textSize="20sp" />

            <RadioGroup
                android:layout_width="270dp"
                android:layout_height="76dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sim"
                    android:id="@+id/radioButton9" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Não"
                    android:id="@+id/radioButton10" />
            </RadioGroup>


        </LinearLayout>
    </ScrollView>

</LinearLayout>
